<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Health Patient App</string>
    <string name="sign_in">Sign in</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="creating">Creating…</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_hint">+1234567890</string>
    <string name="password">Password</string>
    <string name="display_name_optional">Display name (optional)</string>
    <string name="display_name">Display name</string>
    <string name="patient_password_hint">Patients: your default password is your phone number.</string>
    <string name="doctor_register_link">Doctor? Register here</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="patient_no_register_hint">Patients don\'t need to register. Your doctor will create your account.</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="my_patients">My Patients</string>
    <string name="no_patients_yet">No patients yet</string>
    <string name="tap_to_add_patient">Tap + to add a patient</string>
    <string name="add_patient">Add patient</string>
    <string name="patient_phone_number">Patient phone number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="patient_added_success">Patient added. They can sign in with their phone number as both login and password.</string>
    <string name="patient_dashboard">Patient Dashboard</string>
    <string name="daily_health_survey">Daily Health Survey</string>
    <string name="survey_subtitle">Submit your daily health information\nto keep your doctor informed.</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="visual_analog_scale">Visual Analog Scale</string>
    <string name="vas_instruction">Select the face that describes how you are feeling</string>
    <string name="other_symptoms">Other symptoms</string>
    <string name="describe_other_symptoms">Describe other symptoms</string>
    <string name="took_medicine">Took medicine for pain</string>
    <string name="medicine_details">Medicine name / details</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="submitting">Submitting…</string>
    <string name="select_pain_level">Please select a pain level</string>
    <string name="survey_submitted">Survey submitted successfully.</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_form_submissions">No form submissions yet</string>
    <string name="back">Back</string>
    <string name="pain_level_format">Pain level: %1$d/10</string>
    <string name="symptoms_format">Symptoms: %1$s</string>
    <string name="other_symptoms_yes">Other symptoms: Yes</string>
    <string name="other_symptoms_no">Other symptoms: No</string>
    <string name="details_format">Details: %1$s</string>
    <string name="took_medicine_yes">Took medicine: Yes</string>
    <string name="took_medicine_no">Took medicine: No</string>
    <string name="medicine_format">Medicine: %1$s</string>

    <string name="vas_0">No pain</string>
    <string name="vas_2">Mild</string>
    <string name="vas_4">Moderate discomfort</string>
    <string name="vas_6">Severe pain</string>
    <string name="vas_8">Very severe pain</string>
    <string name="vas_10">Most pain possible</string>
</resources>
